--- a/index.html
+++ b/index.html
@@ -431,6 +431,16 @@
         </div>
       </div>
     </footer>
+    <!-- Modai window -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn">
+          <svg class="modal-close-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-close-icon"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
