--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         <div class="container">
           <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
 
-          <button class="hero-btn" type="button">Order Service</button>
+          <button class="hero-btn" data-modal-open type="button">
+            Order Service
+          </button>
         </div>
       </section>
       <!-- Section 2 -->
@@ -432,11 +434,11 @@
       </div>
     </footer>
     <!-- Modai window -->
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-close-btn">
-          <svg class="modal-close-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-close-icon"></use>
+        <button class="modal-close-btn" data-modal-close type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
