--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="nav-list list">
             <li>
-              <a class="nav-link link" href="./index.html">Studio</a>
+              <a class="nav-link link active" href="./index.html">Studio</a>
             </li>
             <li>
               <a class="nav-link link" href="./portfolio.html">Portfolio</a>
