--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,12 @@
           >
           <ul class="nav-list list">
             <li>
-              <a class="nav-link link" href="./index.html">Studio</a>
+              <a class="nav-link link active" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+              <a class="nav-link link active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li>
               <a class="nav-link link" href="">Contacts</a>
