--- a/portfolio.html
+++ b/portfolio.html
@@ -78,12 +78,19 @@
           <ul class="list cart-list">
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card1.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
                   <p class="portfolio-desc">App</p>
@@ -92,12 +99,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card2.jpg"
-                  alt="phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card2.jpg"
+                    alt="phone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Cashless Payment</h2>
                   <p class="portfolio-desc">Marketing</p>
@@ -106,12 +120,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card3.jpg"
-                  alt="laptop"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card3.jpg"
+                    alt="laptop"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Meditation App</h2>
                   <p class="portfolio-desc">App</p>
@@ -120,12 +141,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card4.jpg"
-                  alt="taxi"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card4.jpg"
+                    alt="taxi"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Taxi Service</h2>
                   <p class="portfolio-desc">Marketing</p>
@@ -134,12 +162,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card5.jpg"
-                  alt="telefon"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card5.jpg"
+                    alt="telefon"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
                   <p class="portfolio-desc">Design</p>
@@ -148,12 +183,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card6.jpg"
-                  alt="women"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card6.jpg"
+                    alt="women"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Online Courses</h2>
                   <p class="portfolio-desc">Marketing</p>
@@ -162,12 +204,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card7.jpg"
-                  alt="Stories"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card7.jpg"
+                    alt="Stories"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
                   <p class="portfolio-desc">Design</p>
@@ -176,12 +225,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Organic Food</h2>
                   <p class="portfolio-desc">Web Site</p>
@@ -190,12 +246,19 @@
             </li>
             <li class="cart-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/portfolio/card9.jpg"
-                  alt="Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/portfolio/card9.jpg"
+                    alt="Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-cart-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
                   <p class="portfolio-desc">Web Site</p>
